--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="text-1">Hello, my name is</div>
                     <div class="text-2">Vedant Desai</div>
                     <div class="text-3">And I'm a <span class="typing"></span></div>
-                    <a href="mailto:vedantdesai942000@gmail.com">Hire me</a>
+                    <a href="mailto:vedantdesai942000@gmail.com">Contact me</a>
                 </div>
             </div>
         </div>
